<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.finos.legend</groupId>
    <artifactId>legend-lite</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Legend Lite</name>
    <description>
        A clean-room implementation of FINOS Legend Engine core.
        100% SQL Push-Down execution against DuckDB and SQLite.
    </description>

    <modules>
        <module>core</module>
        <module>engine</module>
        <module>nlq</module>
        <module>pct</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Dependency versions (engine only) -->
        <duckdb.version>1.5.0.0</duckdb.version>
        <sqlite.version>3.47.1.0</sqlite.version>
        <junit.version>5.11.3</junit.version>
        <jacoco.version>0.8.12</jacoco.version>
        <!-- ONE exec file for the whole reactor; see scripts/coverage.sh -->
        <jacoco.destFile>${maven.multiModuleProjectDirectory}/target/jacoco.exec</jacoco.destFile>
        <archunit.version>1.3.0</archunit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>org.finos.legend</groupId>
                <artifactId>legend-lite-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.finos.legend</groupId>
                <artifactId>legend-lite-engine</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- ArchUnit (test scope; for core/ wall enforcement) -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
            </dependency>

            <!-- DuckDB JDBC Driver -->
            <dependency>
                <groupId>org.duckdb</groupId>
                <artifactId>duckdb_jdbc</artifactId>
                <version>${duckdb.version}</version>
            </dependency>

            <!-- SQLite JDBC Driver -->
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>

            <!-- JUnit 5 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!-- COVERAGE. Never run a suite in isolation and read the number:
             core/ production code is exercised by THREE suites in three
             modules (core tests, engine's corpus sweep, pct), and the exec
             file is APPEND-mode, so a partial or repeated run silently
             inflates. scripts/coverage.sh is the only supported entry
             point - it deletes the stale exec, runs all three in order,
             restores the corpus baseline, and reports once at the end.
             Build tooling only: a -javaagent, never a dependency. -->
        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>agent</id>
                                <goals><goal>prepare-agent</goal></goals>
                                <configuration>
                                    <destFile>${jacoco.destFile}</destFile>
                                    <append>true</append>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
